Add sidebar icons and items

--- a/index.html
+++ b/index.html
@@ -8,7 +8,54 @@
 </head>
 <body>
     <div class="dashboard">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <section>
+                <div class="title">
+                    <img src="icons/view-dashboard.svg" alt="Grid of squares icon representing user dashboard" class="icon">
+                    <span class="text">Dashboard</span>
+                </div>
+            </section>
+            <section>
+                <div class="item">
+                    <img src="icons/home.svg" alt="House icon representing user homepage" class="icon">
+                    <span class="text">Home</span>
+                </div>
+                <div class="item">
+                    <img src="icons/card-account-details.svg" alt="Identification card icon representing user profile" class="icon">
+                    <span class="text">Profile</span>
+                </div>
+                <div class="item">
+                    <img src="icons/message.svg" alt="Message icon representing user messages" class="icon">
+                    <span class="text">Messages</span>
+                </div>
+                <div class="item">
+                    <img src="icons/clock-time-four-outline.svg" alt="Clock icon representing user history" class="icon">
+                    <span class="text">History</span>
+                </div>
+                <div class="item">
+                    <img src="icons/file-document-multiple.svg" alt="Stack of documents icon representing user tasks" class="icon">
+                    <span class="text">Tasks</span>
+                </div>
+                <div class="item">
+                    <img src="icons/account-group.svg" alt="Account group icon representing user communities" class="icon">
+                    <span class="text">Communities</span>
+                </div>
+            </section>
+            <section>
+                <div class="item">
+                    <img src="icons/cog.svg" alt="Cog icon representing user settings" class="icon">
+                    <span class="text">Settings</span>
+                </div>
+                <div class="item">
+                    <img src="icons/help-box-outline.svg" alt="Help box icon for user support" class="icon">
+                    <span class="text">Support</span>
+                </div>
+                <div class="item">
+                    <img src="icons/shield-sword-outline.svg" alt="A shield with a sword outline representing user privacy" class="icon">
+                    <span class="text">Privacy</span>
+                </div>        
+            </section>
+        </div>
         <div class="header"></div>
         <div class="content">
             <div class="projects"></div>
