Add and style search component

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
                 </div>        
             </section>
         </div>
-        <div class="header"></div>
+        <div class="header">
+            <div class="searchContainer">
+                <img src="icons/magnify.svg" alt="A magnifying glass icon representing search functionality" class="icon">
+                <input class="search" type="text">
+            </div>
+        </div>
         <div class="content">
             <div class="projects"></div>
             <div class="announcements"></div>
