Add section for notifcations, profile pic, and full name

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                 <img src="icons/magnify.svg" alt="A magnifying glass icon representing search functionality" class="icon">
                 <input class="search" type="text">
             </div>
+            <div class="nameContainer">
+                <img src="icons/bell-ring-outline.svg" alt="A bell icon representing user notifications" class="icon">
+                <img src="images/profile.jpg" alt="User profile picture" class="profilePicture">
+                <span class="name">Robert Laughlin</span>
+            </div>
         </div>
         <div class="content">
             <div class="projects"></div>
