Add and style greeting section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                 <img src="images/profile.jpg" alt="User profile picture" class="profilePicture">
                 <span class="name">Robert Laughlin</span>
             </div>
+            <div class="greetingContainer">
+                <img src="images/profile.jpg" alt="User profile picture" class="profilePicture">
+                <span class="greeting">Hi there,</span>
+                <span class="nameTag">Robert Laughlin (@RobLaughlin)</span>
+            </div>
         </div>
         <div class="content">
             <div class="projects"></div>
