Add and style button section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 <span class="greeting">Hi there,</span>
                 <span class="nameTag">Robert Laughlin (@RobLaughlin)</span>
             </div>
+            <div class="buttonContainer">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="content">
             <div class="projects"></div>
