Add responsive cards to projects section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,35 @@
             </div>
         </div>
         <div class="content">
-            <div class="projects"></div>
+            <div class="projectsContainer">
+                <span class="title">Your Projects</span>
+                <div class="projects">
+                    <div class="card">
+                        <span class="title">Super Cool Project</span>
+                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                    </div>
+                    <div class="card">
+                        <span class="title">Super Cool Project</span>
+                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                    </div>
+                    <div class="card">
+                        <span class="title">Super Cool Project</span>
+                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                    </div>
+                    <div class="card">
+                        <span class="title">Super Cool Project</span>
+                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                    </div>
+                    <div class="card">
+                        <span class="title">Super Cool Project</span>
+                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                    </div>
+                    <div class="card">
+                        <span class="title">Super Cool Project</span>
+                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                    </div>
+                </div>
+            </div>
             <div class="announcements"></div>
             <div class="trending"></div>
         </div>
