Add favorite, view, and share buttons to the project cards

--- a/index.html
+++ b/index.html
@@ -84,26 +84,56 @@
                     <div class="card">
                         <span class="title">Super Cool Project</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
                     </div>
                     <div class="card">
                         <span class="title">Super Cool Project</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
                     </div>
                     <div class="card">
                         <span class="title">Super Cool Project</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
                     </div>
                     <div class="card">
                         <span class="title">Super Cool Project</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
                     </div>
                     <div class="card">
                         <span class="title">Super Cool Project</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
                     </div>
                     <div class="card">
                         <span class="title">Super Cool Project</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
                     </div>
                 </div>
             </div>
