Add announcements section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,23 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements"></div>
+            <div class="announcementsContainer">
+                <span class="title">Announcements</span>
+                <div class="announcements">
+                    <div class="announcement">
+                        <div class="title">Site Maintenance</div>
+                        <div class="description">Pariatur id ullamco proident sint aliquip sint culpa sint do velit reprehenderit. Commodo nostrud mollit occaecat exercitation nisi ut ea ullamco. Esse dolore irure sit et laboris Lorem aute.</div>
+                    </div>
+                    <div class="announcement">
+                        <div class="title">Community Share Day</div>
+                        <div class="description">Deserunt ullamco nisi excepteur irure nulla.</div>
+                    </div>
+                    <div class="announcement">
+                        <div class="title">Updated Privacy Policy</div>
+                        <div class="description">Duis veniam mollit non mollit duis nulla.</div>
+                    </div>
+                </div>
+            </div>
             <div class="trending"></div>
         </div>
     </div>
