Add trending section & fix heights with both the announcement and trending sections

--- a/index.html
+++ b/index.html
@@ -137,24 +137,58 @@
                     </div>
                 </div>
             </div>
-            <div class="announcementsContainer">
-                <span class="title">Announcements</span>
-                <div class="announcements">
-                    <div class="announcement">
-                        <div class="title">Site Maintenance</div>
-                        <div class="description">Pariatur id ullamco proident sint aliquip sint culpa sint do velit reprehenderit. Commodo nostrud mollit occaecat exercitation nisi ut ea ullamco. Esse dolore irure sit et laboris Lorem aute.</div>
+            <div class="trendingAnnouncementsContainer">
+                <div class="announcementsContainer">
+                    <span class="title">Announcements</span>
+                    <div class="announcements">
+                        <div class="announcement">
+                            <div class="title">Site Maintenance</div>
+                            <div class="description">Pariatur id ullamco proident sint aliquip sint culpa sint do velit reprehenderit. Commodo nostrud mollit occaecat exercitation nisi ut ea ullamco. Esse dolore irure sit et laboris Lorem aute.</div>
+                        </div>
+                        <div class="announcement">
+                            <div class="title">Community Share Day</div>
+                            <div class="description">Deserunt ullamco nisi excepteur irure nulla.</div>
+                        </div>
+                        <div class="announcement">
+                            <div class="title">Updated Privacy Policy</div>
+                            <div class="description">Duis veniam mollit non mollit duis nulla.</div>
+                        </div>
                     </div>
-                    <div class="announcement">
-                        <div class="title">Community Share Day</div>
-                        <div class="description">Deserunt ullamco nisi excepteur irure nulla.</div>
-                    </div>
-                    <div class="announcement">
-                        <div class="title">Updated Privacy Policy</div>
-                        <div class="description">Duis veniam mollit non mollit duis nulla.</div>
+                </div>
+                <div class="trendingContainer">
+                    <span class="title">Trending</span>
+                    <div class="trending">
+                        <div class="trend">
+                            <div class="defaultProfilePicture">
+                                <span>A</span>
+                            </div>
+                            <div class="username"><span>@anthony</span></div>
+                            <div class="project"><span>Project 1</span></div>
+                        </div>
+                        <div class="trend">
+                            <div class="defaultProfilePicture">
+                                <span>B</span>
+                            </div>
+                            <div class="username"><span>@beth</span></div>
+                            <div class="project"><span>Project 2</span></div>
+                        </div>
+                        <div class="trend">
+                            <div class="defaultProfilePicture">
+                                <span>C</span>
+                            </div>
+                            <div class="username"><span>@charlie</span></div>
+                            <div class="project"><span>Project 3</span></div>
+                        </div>
+                        <div class="trend">
+                            <div class="defaultProfilePicture">
+                                <span>D</span>
+                            </div>
+                            <div class="username"><span>@derek</span></div>
+                            <div class="project"><span>Project 4</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="trending"></div>
         </div>
     </div>
 </body>
