Add width <= 1200px media query along with responsive sidebar open and closing animation

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <span class="greeting">Hi there,</span>
                 <span class="nameTag">Robert Laughlin (@RobLaughlin)</span>
             </div>
+            <div class="sidebarMenu">
+                <img src="icons/menu.svg" alt="Hamburger menu icon to open the sidebar" class="menu">
+            </div>
             <div class="buttonContainer">
                 <button>New</button>
                 <button>Upload</button>
@@ -191,5 +194,6 @@
             </div>
         </div>
     </div>
+    <script src="js/dashboard.js" type="text/javascript"></script>
 </body>
 </html>
