Fix alignment of icons in project cards

--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
                 <div class="projects">
                     <div class="card">
                         <span class="title">Super Cool Project</span>
+                        <p class="description">Ea Lorem sunt id pariatur proident enim exercitation tempor Lorem duis quis laborum consequat et. Ad veniam ullamco eiusmod deserunt exercitation pariatur sit occaecat. Ipsum ipsum nostrud aliquip tempor voluptate sunt excepteur laboris. Consectetur fugiat esse sint ad eu aliqua esse voluptate. Proident laborum sunt proident adipisicing nisi duis consequat ut sint occaecat id.</p>
+                        <div class="icons">
+                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
+                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
+                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <span class="title">Super Cool Project 2</span>
                         <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
                         <div class="icons">
                             <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
@@ -94,8 +103,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <span class="title">Super Cool Project</span>
-                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <span class="title">Project 1</span>
+                        <p class="description">Commodo mollit qui qui et laborum proident incididunt esse sit anim duis fugiat. Est culpa aliqua est aliquip laborum eiusmod est officia sunt ipsum officia eu laboris. Excepteur cillum ut et commodo duis proident dolore consequat qui nulla quis aliqua duis. Enim pariatur excepteur enim qui eu officia mollit exercitation eu culpa laboris. Veniam dolore elit ex labore minim.</p>
                         <div class="icons">
                             <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
                             <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
@@ -103,8 +112,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <span class="title">Super Cool Project</span>
-                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <span class="title">Project 2</span>
+                        <p class="description">Qui minim magna minim commodo do proident pariatur amet mollit ipsum excepteur eu adipisicing. Veniam aliqua ea reprehenderit ipsum ad et irure. Aute nulla sint eu ea. Tempor officia duis laborum laborum eiusmod. Quis fugiat dolor amet ullamco labore ipsum irure nisi nulla enim laborum in exercitation. Pariatur nostrud sint commodo pariatur velit.</p>
                         <div class="icons">
                             <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
                             <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
@@ -112,8 +121,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <span class="title">Super Cool Project</span>
-                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <span class="title">Project 3</span>
+                        <p class="description">Est irure pariatur esse quis duis qui est incididunt pariatur sunt. Eiusmod amet cillum commodo voluptate irure ipsum consectetur consequat mollit anim reprehenderit. Sunt culpa veniam aliqua elit fugiat culpa ea enim aute labore dolor pariatur. Do dolore enim laboris incididunt nisi ad ex nulla. Qui nulla in ullamco velit enim nisi. Officia minim enim sint labore eiusmod cupidatat.</p>
                         <div class="icons">
                             <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
                             <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
@@ -121,17 +130,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <span class="title">Super Cool Project</span>
-                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
-                        <div class="icons">
-                            <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
-                            <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
-                            <img src="icons/share-variant-outline.svg" alt="An icon of 3 connected nodes, click to share this project" class="icon">
-                        </div>
-                    </div>
-                    <div class="card">
-                        <span class="title">Super Cool Project</span>
-                        <p class="description">Velit elit esse mollit quis occaecat anim nostrud est ea nulla nisi. Id dolore velit pariatur voluptate sint laborum. Consectetur aliquip ad nisi ad tempor eu ipsum velit ullamco exercitation pariatur magna minim nulla. Dolore pariatur adipisicing consequat aliqua nisi sit cillum irure velit dolor veniam culpa minim do.</p>
+                        <span class="title">Project 4</span>
+                        <p class="description">Qui esse cillum elit pariatur qui nostrud aute dolor sint minim fugiat nostrud irure fugiat. Ea aute qui tempor proident mollit ullamco ut eiusmod sit proident et exercitation qui aute. Veniam esse minim laboris qui ullamco nostrud anim quis tempor pariatur.</p>
                         <div class="icons">
                             <img src="icons/star-plus-outline.svg" alt="An icon of a star, click to favorite this project" class="icon">
                             <img src="icons/eye-plus-outline.svg" alt="An icon of an eye, click to view this project" class="icon">
